--- a/Javascript/13-webpack/package.json
+++ b/Javascript/13-webpack/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack-dev-server",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-sass": "4.9.0",
+    "webpack-dev-server": "3.11.0",
+    "file-loader": "1.1.11",
+    "cross-env": "5.1.5",
+    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "node-sass": "4.14.1",
     "sass-loader": "7.0.1",
     "css-loader": "0.28.11",
     "style-loader": "0.21.0",
     "mini-css-extract-plugin": "0.4.0",
-    "webpack": "4.8.1",
-    "webpack-cli": "2.1.3"
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12"
   }
 }
