--- a/Javascript/17-Vue/package.json
+++ b/Javascript/17-Vue/package.json
@@ -12,6 +12,10 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"http-server": "^0.11.1"
+		"http-server": "^0.12.3",
+		"vue": "2.6.12"
+	},
+	"devDependencies": {
+		"@vue/cli": "4.5.12"
 	}
 }
